# hospital

./: Cargo.toml  diesel.toml  local.env
migrations/2025-04-11-084350_add_search_vector_to_posts/: up.sql
src/: main.rs  operations.rs
src/api/: routes.rs
src/api/handlers/: handlers.rs
src/db/: db.rs
src/error/: error.rs
src/models/: models.rs
src/schema/: schema.rs
src/test/: integration.rs
